# thej-bsWEWILLGET

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  dev-backend.ps1  dev-frontend.ps1  dev.ps1  stop-dev.ps1
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260619_0001_workspace_foundation.py  20260619_0002_job_applications.py  20260619_0003_workspace_administration.py  20260619_0004_workspace_invitations.py  20260620_0003_authentication_sessions.py  20260620_0005_workspace_admin_role.py  20260621_0006_pending_registrations.py  20260622_0007_invitation_responses.py  20260623_0008_ai_resume_tailor.py  20260625_0009_scale_indexes.py  20260701_0010_membership_weekly_goal.py  (+1 more)
backend/app/: __init__.py  main.py
backend/app/api/: index.py  router.py
backend/tests/: conftest.py  test_ai_resume_tailor.py  test_alembic_configuration.py  test_application_creation.py  test_application_lifecycle.py  test_application_listing.py  test_application_queries.py  test_application_summary.py  test_auth_service.py  test_current_user.py  test_email_delivery.py  test_health.py  test_job_posting_autofill.py  test_large_workspace_scale.py  test_member_cap.py  test_member_pagination.py  test_my_week.py  test_openai_ai_provider.py  test_passwords.py  test_registration.py  test_resume_profile.py  test_team_accountability.py  test_team_accountability_weekly_goal.py  test_url_normalization.py  test_workspace_access.py  test_workspace_administration.py  test_workspace_discovery.py  test_workspace_invitation_inbox.py
(+115 files in other folders)
