[project]
name = "apply-together-backend"
version = "0.1.0"
description = "ApplyTogether Milestone 1 backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.15,<2",
    "authx>=1,<2",
    "fastapi>=0.115,<1",
    "pwdlib[argon2]>=0.3,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
    "email-validator>=2,<3",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.9,<1",
    "openai>=1.99,<3",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = []

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true
